...
    );
}

export function HomeScreen({navigation}: HomeScreenProps) {
    return (
        <ScreenContainer>
            <ScreenHeader title="Factor"/>

            <View style={styles.destinations}>
                <Destination
                    iconName="show-chart"
                    label="Observations"
                    onPress={() => navigation.navigate('ObservationList')}
                />
                <Destination
                    iconName="flag"
                    label="Events"
                    onPress={() => navigation.navigate('EventList')}
...
