...
                        {observation.metrics.map(renderMetricInput)}
                    </View>
                </ScrollView>

                <View style={styles.footer}>
                    <PrimaryActionButton
                        label={"Add Record"}
                        onPress={handleSave}
                        loading={saving}/>
                </View>
            </KeyboardAvoidingView>
        </SafeAreaView>
    );
...
